--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
     "bootstrap": "^4.5.0",
     "jquery": "^3.5.1",
     "jquery-react": "^1.0.0",
-    "modali": "^1.2.0",
+    "modali": "^1.0.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^1.1.5",
     "reactstrap": "^8.5.1",
     "styled-components": "^5.1.1"
   },
